APIs/azure.com/cognitiveservices-LUIS-Runtime/v2.0/python-client/README.md
# openapi-client
No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2.0
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://azure.local/luis/v2.0/apps
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://azure.local/luis/v2.0/apps"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure API key authorization: apiKeyHeader
configuration.api_key['apiKeyHeader'] = os.environ["API_KEY"]

# Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
# configuration.api_key_prefix['apiKeyHeader'] = 'Bearer'


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.DefaultApi(api_client)
    app_id = 'app_id_example' # str | The LUIS application ID (Guid).
    q = 'q_example' # str | The utterance to predict.
    timezone_offset = 3.4 # float | The timezone offset for the location of the request. (optional)
    verbose = True # bool | If true, return all intents instead of just the top scoring intent. (optional)
    staging = True # bool | Use the staging endpoint slot. (optional)
    spell_check = True # bool | Enable spell checking. (optional)
    bing_spell_check_subscription_key = 'bing_spell_check_subscription_key_example' # str | The subscription key to use when enabling bing spell check (optional)
    log = True # bool | Log query (default is true) (optional)

    try:
        api_response = api_instance.prediction_resolve(app_id, q, timezone_offset=timezone_offset, verbose=verbose, staging=staging, spell_check=spell_check, bing_spell_check_subscription_key=bing_spell_check_subscription_key, log=log)
        print("The response of DefaultApi->prediction_resolve:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling DefaultApi->prediction_resolve: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://azure.local/luis/v2.0/apps*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DefaultApi* | [**prediction_resolve**](docs/DefaultApi.md#prediction_resolve) | **POST** /{appId} | 
*DefaultApi* | [**prediction_resolve2**](docs/DefaultApi.md#prediction_resolve2) | **GET** /{appId} | 


## Documentation For Models

 - [APIError](docs/APIError.md)
 - [CompositeChildModel](docs/CompositeChildModel.md)
 - [CompositeEntityModel](docs/CompositeEntityModel.md)
 - [EntityModel](docs/EntityModel.md)
 - [EntityWithResolution](docs/EntityWithResolution.md)
 - [EntityWithScore](docs/EntityWithScore.md)
 - [IntentModel](docs/IntentModel.md)
 - [LuisResult](docs/LuisResult.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="apiKeyHeader"></a>
### apiKeyHeader

- **Type**: API key
- **API key parameter name**: Ocp-Apim-Subscription-Key
- **Location**: HTTP header


## Author




