APIs/azure.com/cognitiveservices-LUIS-Runtime/3.0/python-client/README.md
# openapi-client
No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://azure.local
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://azure.local"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure API key authorization: apiKeyHeader
configuration.api_key['apiKeyHeader'] = os.environ["API_KEY"]

# Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
# configuration.api_key_prefix['apiKeyHeader'] = 'Bearer'


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.DefaultApi(api_client)
    app_id = 'app_id_example' # str | The application ID.
    slot_name = 'slot_name_example' # str | The application slot name.
    prediction_request = openapi_client.PredictionRequest() # PredictionRequest | The prediction request parameters.
    verbose = True # bool | Indicates whether to get extra metadata for the entities predictions or not. (optional)
    show_all_intents = True # bool | Indicates whether to return all the intents in the response or just the top intent. (optional)
    log = True # bool | Indicates whether to log the endpoint query or not. (optional)

    try:
        api_response = api_instance.prediction_get_slot_prediction(app_id, slot_name, prediction_request, verbose=verbose, show_all_intents=show_all_intents, log=log)
        print("The response of DefaultApi->prediction_get_slot_prediction:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling DefaultApi->prediction_get_slot_prediction: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://azure.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DefaultApi* | [**prediction_get_slot_prediction**](docs/DefaultApi.md#prediction_get_slot_prediction) | **POST** /apps/{appId}/slots/{slotName}/predict | 
*DefaultApi* | [**prediction_get_slot_prediction_get**](docs/DefaultApi.md#prediction_get_slot_prediction_get) | **GET** /apps/{appId}/slots/{slotName}/predict | 
*DefaultApi* | [**prediction_get_version_prediction**](docs/DefaultApi.md#prediction_get_version_prediction) | **POST** /apps/{appId}/versions/{versionId}/predict | 
*DefaultApi* | [**prediction_get_version_prediction_get**](docs/DefaultApi.md#prediction_get_version_prediction_get) | **GET** /apps/{appId}/versions/{versionId}/predict | 


## Documentation For Models

 - [DynamicList](docs/DynamicList.md)
 - [Error](docs/Error.md)
 - [ErrorBody](docs/ErrorBody.md)
 - [ExternalEntity](docs/ExternalEntity.md)
 - [Intent](docs/Intent.md)
 - [Prediction](docs/Prediction.md)
 - [PredictionRequest](docs/PredictionRequest.md)
 - [PredictionRequestOptions](docs/PredictionRequestOptions.md)
 - [PredictionResponse](docs/PredictionResponse.md)
 - [RequestList](docs/RequestList.md)
 - [Sentiment](docs/Sentiment.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="apiKeyHeader"></a>
### apiKeyHeader

- **Type**: API key
- **API key parameter name**: Ocp-Apim-Subscription-Key
- **Location**: HTTP header


## Author




